<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/post_box"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorDark"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/new_post"
        android:textColor="@color/primaryText"
        android:textSize="10pt" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:theme="@style/TextInputLayoutTheme">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_post_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/message"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines="5" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/cancel"
            android:textColor="@color/secondaryText" />

        <Button
            android:id="@+id/send_post_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/send"
            android:textColor="@color/secondaryText" />

    </LinearLayout>

</LinearLayout>